# games101

./: .gitignore  REAME.md
Assignment0/: CMakeLists.txt  main.cpp
Assignment00/: README.md  basic.cmake  func.cmake  list.cmake  loop.cmake  test.cmake
Assignment00/project01/: CMakeLists.txt  main.cpp
Assignment00/project02/: CMakeLists.txt
Assignment00/project02/animal/: animal.cmake
Assignment00/project03/: CMakeLists.txt  main.cpp
Assignment00/project04/: CMakeLists.txt
Assignment00/project04/animal/: CMakeLists.txt  dog.cpp
Assignment00/project05/: CMakeLists.txt
Assignment00/project06/: CMakeLists.txt  main.cpp
Assignment00/project06/include/: cat.h  dog.h
Assignment00/project07/: CMakeLists.txt  config.h.in  main.cpp
Assignment00/project07/animal/: CMakeLists.txt  cat.cpp
Assignment01/: CMakeLists.txt  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp  test.hpp
Assignment02/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment03/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment04/: main.cpp
Assignment05/: Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
